CHANGES IN FLTK 1.3.0

	- Fixed unexpected shortcut behavior for Win32 (STR #2199)
	- Fixed documentation for Fl_Progress (STR #2209)
	- Fluid printing used wrong colors under Windows (STR #2195)
	- Updated documentation for Fl_Input_
	- Fixed fl_draw_image to obey the alpha channel, hoping that 
	  this has no adverse effect on existing software (OS X only)
	- Added OS X cursor control to Fl_Input (STR #2169)
	- Fix for multiple popups, when dragging and calling fl_alert()
	  and friends from the callback (STR #2159)
	- Avoiding crashes for recursive common dialogs (this does not 
	  fix the issue at hand yet) (STR #1986, 2150)
	- Fixed control key keycodes with modifiers on OS X
	- Added menu shortcut alignment for OS X
	- Fixed bad system menu hadling in OS X (STR #2153)
	- Fixed File Input mouse pointer dragging (STR #2181)
	- Added alternative text input awareness on OS X 
	- Fixed 'del' keycode on OS X (must be verified for all keyboards)
	- Fixed OS X support for sending and receiving dnd data as utf8
	- Added drop box to utf8 test that will show the utf8 encoding
	  for the first dropped character
	- Restructured the unittest application
	- Updated the bundled libpng to v1.2.35 (released 18 Feb. 2009)
	- Fl_Preferences.H now doesn't include windows.h any more
	  (Windows only, STR #2173).
	- Fl_Window::draw() now doesn't reset its x/y-coordinates to 0
	  anymore before drawing itself and its children.
	- All draw() methods of widgets are now protected (STR #2142).
	- The new configure option --enable-x11 (lowercase 'x') enables
	  Cygwin builds under Windows (with --enable-cygwin) to use X11
	  instead of GDI drawing (STR #2147, #2183) and is ignored otherwise.
	- Added Fl_Scroll::bbox() documentation (STR #1893)
	- Removed an XForms compatibility "feature" that prevented the down
	  array of Fl_Menu_Button from drawing (STR #2141).
	- New class Fl_Widget_Tracker to simplify safe handling of widget